# CODE-RUSH

./: .dockerignore  .env.example  .gitignore  .slugignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  app_lite.py  build.sh  check_disk_space.py  create_dirs.py  create_samples.py  docker-compose.yml  download_models.py  lp.py  pyproject.toml  render.yaml  requirements-lite.txt  requirements.txt  run_waitress.py  setup.py  setup_env.py  setup_models.py  wsgi.py
Static/css/: form-styles.css  style.css
Static/js/: analytics.js  business.js  education.js  script.js  webcam.js
major project colab files/: PlasticTypeDataset.ipynb  meta-learner.ipynb  vit.ipynb
models/: README.md
templates/: analytics.html  business.html  education.html  index.html
