[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waste-classification-app"
version = "0.1.0"
description = "Waste Classification Web Application"
requires-python = ">=3.9,<3.11"
dependencies = [
    "Flask>=2.0.1",
    "gunicorn>=20.1.0",
    "python-dotenv>=0.20.0",
    "Pillow>=9.2.0",
    "requests>=2.28.1",
    "tqdm>=4.64.1",
]
